--- a/en/0.html
+++ b/en/0.html
@@ -1,20 +1,20 @@
 <div class="row">
     <div class="col-md-12">
         <div class="main-title">
-            <h6>مهارات التواصل و الكتابة</h6>
+            <h6>خدمه العملاء</h6>
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1271.pdf" class="video-card">
+        <a href="img/files/ar/1250.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/1.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/1.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">مهارات الكتابة المهنية</p>
+                    <p class="text-dark font-bold text-center">نظام شكاوى العملاء أداة لتطوير خدمة العملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1271.pdf" class="mr-2">
+                    <a href="img/files/ar/1250.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -25,16 +25,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1270.pdf" class="video-card">
+        <a href="img/files/ar/1249.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/2.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/2.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">مهارات الكتابة المهنية المتقدمة</p>
+                    <p class="text-dark font-bold text-center">مهارات التعامل مع شكاوى الجمهور والعملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1270.pdf" class="mr-2">
+                    <a href="img/files/ar/1249.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -45,16 +45,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1269.pdf" class="video-card">
+        <a href="img/files/ar/1248.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/3.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/3.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">مهارات الصياغة والكتابة القانونية</p>
+                    <p class="text-dark font-bold text-center">‏قيادة التميز في ثقافة خدمة المتعاملين‏</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1269.pdf" class="mr-2">
+                    <a href="img/files/ar/1248.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -65,16 +65,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1268.pdf" class="video-card">
+        <a href="img/files/ar/1247.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/4.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/4.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">مهارات التواصل مع الآخرين</p>
+                    <p class="text-dark font-bold text-center">تحقيق التميز في خدمة العملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1268.pdf" class="mr-2">
+                    <a href="img/files/ar/1247.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -85,16 +85,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1267.pdf" class="video-card">
+        <a href="img/files/ar/1246.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/5.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/5.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">مهارات التواصل عند الأزمات</p>
+                    <p class="text-dark font-bold text-center">برنامج التسويق الشامل</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1267.pdf" class="mr-2">
+                    <a href="img/files/ar/1246.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -105,16 +105,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1266.pdf" class="video-card">
+        <a href="img/files/ar/1245.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/6.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/6.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">كتابة التقارير للمدقق الداخلي</p>
+                    <p class="text-dark font-bold text-center">التميز في خدمة العملاء (المستوى المتقدم)</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1266.pdf" class="mr-2">
+                    <a href="img/files/ar/1245.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -125,16 +125,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1265.pdf" class="video-card">
+        <a href="img/files/ar/1244.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/7.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/7.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">قوة التأثير في إدارة النزاعات</p>
+                    <p class="text-dark font-bold text-center">التفكير النقدي وحل المشكلات لقادة الخدمة العامة
+                    </p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1265.pdf" class="mr-2">
+                    <a href="img/files/ar/1244.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -145,17 +146,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1264.pdf" class="video-card">
+        <a href="img/files/ar/1243.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/8.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/8.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">شهادة مؤسسة توليس في مهارات اللغة الإنجليزية
-                        القانونية</p>
+                    <p class="text-dark font-bold text-center">الأخصائي المعتمد في خدمة العملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1264.pdf" class="mr-2">
+                    <a href="img/files/ar/1243.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -166,16 +166,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1263.pdf" class="video-card">
+        <a href="img/files/ar/1242.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/9.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/9.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">شهادة في المهارات الفنية للكتابة المهنية</p>
+                    <p class="text-dark font-bold text-center">إستراتيجيات إدارة و تنمية و المحافظة على
+                        العملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1263.pdf" class="mr-2">
+                    <a href="img/files/ar/1242.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -186,16 +187,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1262.pdf" class="video-card">
+        <a href="img/files/ar/1241.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/10.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/10.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">شهادة في التواصل المؤسسي</p>
+                    <p class="text-dark font-bold text-center">إدارة حسابات العملاء و تحقيق رضا العملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1262.pdf" class="mr-2">
+                    <a href="img/files/ar/1241.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -206,16 +207,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1261.pdf" class="video-card">
+        <a href="img/files/ar/1240.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/11.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/11.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">تقنيات كتابة التقارير الفعالة</p>
+                    <p class="text-dark font-bold text-center">إدارة جودة الخدمات وبناء ولاء ورضا العملاء
+                        الفعالة</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1261.pdf" class="mr-2">
+                    <a href="img/files/ar/1240.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -226,16 +228,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1260.pdf" class="video-card">
+        <a href="img/files/ar/1239.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/12.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/12.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">تصميم وإلقاء العروض التقديمية</p>
+                    <p class="text-dark font-bold text-center">إدارة التميز في جودة الخدمة ومهارات التعامل مع
+                        العملاء</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1260.pdf" class="mr-2">
+                    <a href="img/files/ar/1239.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -246,16 +249,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1259.pdf" class="video-card">
+        <a href="img/files/ar/1238.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/13.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/13.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">المهارات المتقدمة في التواصل</p>
+                    <p class="text-dark font-bold text-center">أخصائي تجربة المتعاملين وتفعيل العلامة التجارية
+                        المتميزة</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1259.pdf" class="mr-2">
+                    <a href="img/files/ar/1238.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -266,16 +270,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/1258.pdf" class="video-card">
+        <a href="img/files/ar/1237.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/communication/14.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/customer-sevice/14.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">التواصل على مستوى المؤسسة والإدارات</p>
+                    <p class="text-dark font-bold text-center">أخصائي تجربة العملاء Customer Experience
+                        Specialist</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/1258.pdf" class="mr-2">
+                    <a href="img/files/ar/1237.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
