--- a/en/0.html
+++ b/en/0.html
@@ -1,20 +1,21 @@
 <div class="row">
     <div class="col-md-12">
         <div class="main-title">
-            <h6>الدورات التدريبية للجهات العسكرية والامنية</h6>
+            <h6>مراقبة العمليات التشغيلية</h6>
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/270.pdf" class="video-card">
+        <a href="img/files/ar/1274.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/1.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/operations-monitoring/1.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">وسائل الإعلام و التوعية الأمنية</p>
+                    <p class="text-dark font-bold text-center">نظام البرمجة SIMATIC S7 PLC - وفقاً للمستوى
+                        المتقدّم في الإصدار S7-300400.pdf</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/270.pdf" class="mr-2">
+                    <a href="img/files/ar/1274.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -25,17 +26,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/269.pdf" class="video-card">
+        <a href="img/files/ar/1274.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/2.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/operations-monitoring/2.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">برنامج إدارة المواقف و الأحداث الأمنية الحرجة
-                    </p>
+                    <p class="text-dark font-bold text-center">نظام البرمجة SIMATIC S7 PLC - وفقاً للمستوى
+                        الأساسي في الإصدارة S7-1500.pdf</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/269.pdf" class="mr-2">
+                    <a href="img/files/ar/1274.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -46,17 +47,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/268.pdf" class="video-card">
+        <a href="img/files/ar/1273.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/3.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/operations-monitoring/3.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">الهندسة الأمنية لتأمين المنشآت الحيوية و
-                        الحساسة</p>
+                    <p class="text-dark font-bold text-center">نظام البرمجة SIMATIC S7 PLC - وفقاً للمستوى
+                        الأساسي في الإصدار S7-300400.pdf</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/268.pdf" class="mr-2">
+                    <a href="img/files/ar/1273.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -67,77 +68,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/267.pdf" class="video-card">
+        <a href="img/files/ar/1272.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/4.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/operations-monitoring/4.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">الأمن السيبراني</p>
+                    <p class="text-dark font-bold text-center">أنظمة SCADA - وفقاً للنسخة المتخصصة من برنامج
+                        SIMATIC WinCC.pdf</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/267.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="ml-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/266.pdf" class="video-card">
-            <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/5.jpg" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">الأمن الذاتي المعلوماتي</p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/266.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="ml-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/265.pdf" class="video-card">
-            <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/6.jpg" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">إستخبارات المصادر المفتوحة للمعلومات OSINT</p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/265.pdf" class="mr-2">
-                        <i class="fas fa-2x fa-download"></i>
-                    </a>
-                    <a href="mailto:training@arabian-institute.com" class="ml-2">
-                        <i class="fas fa-2x fa-envelope-open"></i>
-                    </a>
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/264.pdf" class="video-card">
-            <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/military-and-security/7.jpg" alt="">
-            </div>
-            <div class="video-card-body video-card-body--inner">
-                <div class="video-title">
-                    <p class="text-dark font-bold text-center">إدارة التحقيقات في جرائم الطائرات المسيرة Drone
-                    </p>
-                </div>
-                <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/264.pdf" class="mr-2">
+                    <a href="img/files/ar/1272.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
